--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     "lint-staged": "7.0.0",
     "merge-jsons-webpack-plugin": "1.0.14",
     "moment-locales-webpack-plugin": "1.0.5",
+    "node-sass": "4.9.0",
+    "postcss-loader": "2.1.1",
     "prettier": "1.11.1",
     "proxy-middleware": "0.15.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
+    "sass-loader": "7.0.1",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "tapable": "1.0.0",
@@ -79,19 +82,16 @@
     "tslint-config-prettier": "1.9.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.7.2",
-    "sass-loader": "7.0.1",
-    "node-sass": "4.9.0",
-    "postcss-loader": "2.1.1",
-    "xml2js": "0.4.19",
     "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "4.8.0",
     "webpack-cli": "2.1.3",
-    "webpack-dev-server": "3.1.4",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "4.1.2",
     "webpack-notifier": "1.6.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.2.0",
-    "write-file-webpack-plugin": "4.2.0"
+    "write-file-webpack-plugin": "4.2.0",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0"
